<resources>
    <string name="app_name">watoplan</string>
    <string name="settings_name">SETTINGS</string>
    <string name="about_name">ABOUT</string>
    <string name="help_name">HELP</string>
    <string name="themeText">Join the Dark Side?</string>
    <string name="displayAsText">Display As</string>
    <string name="listToggleText">List</string>
    <string name="calendarToggleText">Calendar</string>
    <string name="monthToggleText">MONTH</string>
    <string name="weekToggleText">WEEK</string>
    <string name="dayToggleText">DAY</string>
    <string name="eventTimePlacehold">TIME</string>
    <string name="eventTitlePlacehold">TITLE</string>
    <string name="eventDescPlacehold">DESCRIPTION</string>
    <string name="eventType_desc">Choose Type</string>
    <string name="eventTypeChooser_text">EVENT</string>
    <string name="duedateTypeChooser_text">DUE DATE</string>
    <string name="projectTypeChooser_text">PROJECT</string>
    <string name="reminderTypeChooser_text">REMINDER</string>
    <string name="eventTypePlacehold">TYPE</string>
    <string name="editDateButton">DATE</string>
    <string name="editTimeButton">TIME</string>
    <string name="datetimeLabelText">CHOOSE TIME, AND DATE</string>
    <string name="entityLabelText">RELATED CONTACTS</string>
    <string name="personNamePlacehold">FIRSTNAME LASTNAME</string>
    <string name="addEntityButtonText">ADD PERSON</string>
    <string name="locationLabelText">CHOOSE LOCATION</string>
    <string name="mapButtonText">OPEN MAP</string>
    <string name="saveButtonText">SAVE</string>
    <string name="eventTypesEditTitle">ACTIVITY TYPES</string>
    <string name="pressedText">ACTIVE</string>
    <string name="normalText">NORMAL</string>
    <string name="hintName">NAME</string>
    <string name="parametersTitleText">PARAMETERS</string>
    <string name="titleRadioText">TITLE</string>
    <string name="descRadioText">DESCRIPTION</string>
    <string name="datetimeRadioText">DATETIME</string>
    <string name="locationRadioText">LOCATION</string>
    <string name="entitiesRadioText">PEOPLE</string>
    <string name="repeatRadioText">REPETITIONS</string>
    <string name="cancelText">CANCEL</string>
    <string name="deleteText">DELETE</string>
    <string name="saveText">SAVE</string>
    <string name="addTypeText">ADD TYPE</string>

    <string name="dateFormattedText">%1$s, %2$s</string>
    <string name="progress_label">PROGRESS</string>
    <string name="priority_label">PRIORITY</string>
    <string name="notification_label">NOTIFICATIONS</string>
</resources>
