<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_margin="12dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/hintName"/>

    <LinearLayout
        android:id="@+id/typeColorsContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/typeColorNormalButton"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/normalText"/>

        <Button
            android:id="@+id/typeColorPressedButton"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/colorAccent_pressed"
            android:textColor="@color/white"
            android:text="@string/pressedText"/>

    </LinearLayout>

    <TextView
        android:id="@+id/parametersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/parametersTitleText"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/parametersContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/TITLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/titleRadioText"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/DESCRIPTION"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/descRadioText"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/DATETIME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/datetimeRadioText"/>
        <RadioButton
            android:id="@+id/LOCATION"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/locationRadioText"/>
        <RadioButton
            android:id="@+id/ENTITIES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/entitiesRadioText"/>
        <RadioButton
            android:id="@+id/REPEAT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/repeatRadioText"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/typeCancelButton"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@color/cancel_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/cancelText"/>
        <Button
            android:id="@+id/typeSaveButton"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/saveText"/>
    </LinearLayout>

</LinearLayout>