<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="2dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="2dp"
    android:layout_marginBottom="3dp">

    <LinearLayout
        android:layout_weight="0.35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventTimePlacehold"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/eventType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventTypePlacehold"
        android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.65"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/eventTitlePlacehold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/eventDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventDescPlacehold" />

    </LinearLayout>

</LinearLayout>
